refactor api naming
